--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.6.4",
         "doctrine/dbal": "^2.5",
-        "laravel/framework": "5.3.*"
+        "intervention/image": "^2.3",
+        "laravel/framework": "5.3.*",
+        "mews/purifier": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
